--- a/pubapi/openapi/v1beta.yml
+++ b/pubapi/openapi/v1beta.yml
@@ -79,6 +79,185 @@ paths:
         "400":
           $ref: "#/components/responses/400"
 
+    patch:
+      operationId: ingestPatchObject
+      tags:
+        - Ingestion
+      security:
+        - BearerTokenAuth: []
+        - ApiKeyAuth: []
+      summary: Ingest (upsert) a new version of an object from the data model
+      description: |
+        Note that unknown fields (not part of the data model) are forbidden and will be rejected.
+      parameters:
+        - name: objectType
+          in: path
+          description: Name of the object type used for ingestion
+          required: true
+          schema:
+            type: string
+        - name: monitor
+          in: query
+          description: Whether to put the ingested object under continuous monitoring
+          schema:
+            type: boolean
+        - name: monitoring_config_id
+          in: query
+          description: If monitoring the object, which configuration to use. Can be repeated multiple times.
+          schema:
+            type: string
+            format: uuid
+        - name: skip_screening
+          in: query
+          description: If monitoring, whether to skip the initial screening of the ingested object.
+          schema:
+            type: boolean
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties: true
+              required:
+                - object_id
+                - updated_at
+              properties:
+                object_id:
+                  description: Client side ID of the object to ingest
+                  type: string
+                updated_at:
+                  description: Date the object was last updated
+                  type: string
+                  format: date-time
+      responses:
+        "200":
+          description: No new object was ingested
+        "201":
+          description: The object was successfully ingested
+        "400":
+          $ref: "#/components/responses/400"
+
+  /ingest/{objectType}/batch:
+    post:
+      operationId: ingestObjectBatch
+      tags:
+        - Ingestion
+      security:
+        - BearerTokenAuth: []
+        - ApiKeyAuth: []
+      summary: Ingest an array of objects from the data model
+      description: |
+        Note that unknown fields (not part of the data model) are forbidden and will be rejected.
+      parameters:
+        - name: objectType
+          in: path
+          description: Name of the object type used for ingestion
+          required: true
+          schema:
+            type: string
+        - name: monitor
+          in: query
+          description: Whether to put the ingested object under continuous monitoring
+          schema:
+            type: boolean
+        - name: monitoring_config_id
+          in: query
+          description: If monitoring the object, which configuration to use. Can be repeated multiple times.
+          schema:
+            type: string
+            format: uuid
+        - name: skip_screening
+          in: query
+          description: If monitoring, whether to skip the initial screening of the ingested object.
+          schema:
+            type: boolean
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                type: object
+                additionalProperties: true
+                required:
+                  - object_id
+                  - updated_at
+                properties:
+                  object_id:
+                    description: Client side ID of the object to ingest
+                    type: string
+                  updated_at:
+                    description: Date the object was last updated
+                    type: string
+                    format: date-time
+      responses:
+        "200":
+          description: No new object was ingested
+        "201":
+          description: The object was successfully ingested
+        "400":
+          $ref: "#/components/responses/400"
+
+    patch:
+      operationId: ingestPatchObjectBatch
+      tags:
+        - Ingestion
+      security:
+        - BearerTokenAuth: []
+        - ApiKeyAuth: []
+      summary: Ingest (upsert) an array of new versions of objects from the data model
+      description: |
+        Note that unknown fields (not part of the data model) are forbidden and will be rejected.
+      parameters:
+        - name: objectType
+          in: path
+          description: Name of the object type used for ingestion
+          required: true
+          schema:
+            type: string
+        - name: monitor
+          in: query
+          description: Whether to put the ingested object under continuous monitoring
+          schema:
+            type: boolean
+        - name: monitoring_config_id
+          in: query
+          description: If monitoring the object, which configuration to use. Can be repeated multiple times.
+          schema:
+            type: string
+            format: uuid
+        - name: skip_screening
+          in: query
+          description: If monitoring, whether to skip the initial screening of the ingested object.
+          schema:
+            type: boolean
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                type: object
+                additionalProperties: true
+                required:
+                  - object_id
+                  - updated_at
+                properties:
+                  object_id:
+                    description: Client side ID of the object to ingest
+                    type: string
+                  updated_at:
+                    description: Date the object was last updated
+                    type: string
+                    format: date-time
+      responses:
+        "200":
+          description: No new object was ingested
+        "201":
+          description: The object was successfully ingested
+        "400":
+          $ref: "#/components/responses/400"
+
   /cases:
     get:
       operationId: listCases
